--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://denamahmud.github.io/my-app",
+  "homepage": "https://denamahmud.github.io/ShoppingCartProject01",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
