--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/denamahmud/shopping-cart-react-00.git",
+  "homepage": "https://denamahmud.github.io/shopping-cart-react-00/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
