--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
-    "bootstrap": "^5.1.1",
+    "bootstrap": "^5.1.3",
     "build": "^0.1.4",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.1",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.1",
     "react-scripts": "4.0.3",
     "serve": "^12.0.1",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
