--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.23.0",
-    "bootstrap": "^5.1.3",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "build": "^0.1.4",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.3.0",
+    "package-lock.json": "^1.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.1",
-    "react-scripts": "4.0.3",
-    "serve": "^12.0.1",
-    "styled-components": "^5.3.5",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "^5.0.1",
+    "serve": "^14.1.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
